update: bdd unit test specs

--- a/test/unit/unit.specs.scss
+++ b/test/unit/unit.specs.scss
@@ -1,3 +1,4 @@
 @include runner-start;
-@import "units/unit.functions.maths";
+@import "units/unit.functions.unit";
+@import "units/unit.functions.math";
 @include runner-end;
