update: list-prepend comment

--- a/src/helpers/functions/list/_list-prepend.scss
+++ b/src/helpers/functions/list/_list-prepend.scss
@@ -1,6 +1,6 @@
 // Adds `$value` as first index of `$list`.
 //
-// @param {List} $	list  				- list to preprend value
+// @param {List} 	$list  				- list to prepend value
 // @param {*}    	$value 				- value to prepend to the list
 // @param {String}  $separator (null)	- list separator
 //
