--- a/src/helpers/functions/_functions.scss
+++ b/src/helpers/functions/_functions.scss
@@ -1,3 +1,11 @@
+// Utils functions
+@import "utils/utils";
+
+// Unit functions
+@import "unit/unit";
+
+// Math functions
 @import "math/math";
 
-@import "unit/unit";
+// List functions
+@import "list/list";
