--- a/test/unit/unit.specs.scss
+++ b/test/unit/unit.specs.scss
@@ -1,4 +1,5 @@
 @include runner-start;
-@import "units/unit.functions.unit";
-@import "units/unit.functions.math";
+@import "units/unit.functions.unit",
+        "units/unit.functions.math",
+        "units/unit.functions.list";
 @include runner-end;
