--- a/test/unit/_unit.tools.scss
+++ b/test/unit/_unit.tools.scss
@@ -6,11 +6,11 @@ $bc-setting-raise-error: false !global;
 
 @function throwError( $msg: "This function is used to throw exit code 1" )
 {
-  @warn "#{$msg}";
-  @if not $bc-setting-raise-error
-  {
-      @return ERROR;
-  } 
+    @warn "#{$msg}";
+    @if not $bc-setting-raise-error
+    {
+        @return ERROR;
+    } 
 }
 
 @function json-encode($value) {
@@ -37,9 +37,16 @@ $bc-setting-raise-error: false !global;
 	@else if $type == 'number' {
 		@return _json-encode--number($value);
 	}
+  @else if $type == 'bool' {
+    @return _json-encode--bool($value);
+  }
 
 	@warn "Unknown type for #{$value} (#{$type}).";
   	@return false;
+}
+
+@mixin runner-start {
+
 }
 
 @mixin runner-end {
@@ -64,29 +71,28 @@ $bc-setting-raise-error: false !global;
     }
   }
 
-  @debug "
+    @debug "
 
-  	Test Results
+    Test Results
 
-  	Success: 		#{$bc-failed == 0}
+    Success:    #{$bc-failed == 0}
 
-  	Stats: 			#{$bc-stats}
+    Stats:      #{$bc-stats}
 
-  	Tests: 			#{$bc-total}
+    Tests:      #{$bc-total}
 
-  	Asserts: 		#{$bc-asserts}
+    Asserts:    #{$bc-asserts}
 
-  	Passed: 		#{$bc-passed}
+    Passed:     #{$bc-passed}
 
-  	Failed: 		#{$bc-failed}
+    Failed:     #{$bc-failed}
 
-  	Skipped: 		#{$bc-skipped}
+    Skipped:    #{$bc-skipped}
 
-  ";
+    ";
+
 
   @if( $bc-failed != 0 ){
   	$error: throwError( "Test failed" );
   }
-
-  /* << Bootcamp << */
 }
