--- a/src/helpers/functions/math/_math-atan2.scss
+++ b/src/helpers/functions/math/_math-atan2.scss
@@ -1,14 +1,19 @@
 // Returns the arctangent of the quotient of its arguments.
+//
 // @param {Number} $y
 // @param {Number} $x
+//
+// @return {Number}
+//
 // @example
-//     math-atan2(0, 0)       // 0
-//     math-atan2(0, -0.0)    // 3.14159
-//     math-atan2(-0.0, 0)    // 0
-//     math-atan2(-0.0, -0.0) // -3.14159
-//     math-atan2(0, 1)       // 0
-//     math-atan2(0, -1)      // 3.14159
-@function math-atan2 ($y, $x) {
+//     math-atan2(0, 0)                 // 0
+//     math-atan2(0, -0.0)              // 3.14159
+//     math-atan2(-0.0, 0)              // 0
+//     math-atan2(-0.0, -0.0)           // -3.14159
+//     math-atan2(0, 1)                 // 0
+//     math-atan2(0, -1)                // 3.14159
+
+@function math-atan2($y, $x) {
      @if $x > 0 {
         @return math-atan($y / $x);
     } @else if $x < 0 {
