--- a/src/helpers/functions/math/_math-ldexp.scss
+++ b/src/helpers/functions/math/_math-ldexp.scss
@@ -1,7 +1,11 @@
 // Returns $x * 2^$exp
+//
 // @param {Number} $x
 // @param {Number} $exp
-@function math-ldexp ($x, $exp) {
+//
+// @return {Number}
+
+@function math-ldexp($x, $exp) {
     $b: if($exp >= 0, 2, 1 / 2);
     @if $exp < 0 {
         $exp: $exp * -1;
