--- a/src/helpers/functions/math/_math-pow.scss
+++ b/src/helpers/functions/math/_math-pow.scss
@@ -1,12 +1,16 @@
 // Returns base to the exponent power.
-// @param {Number} $base The base number
-// @param {Number} $exp The exponent to which to raise base
+//
+// @param {Number} $base                - The base number
+// @param {Number} $exp                 - The exponent to which to raise base
+//
 // @return {Number}
+//
 // @example
-//     math-pow(4, 2)   // 16
-//     math-pow(4, -2)  // 0.0625
-//     math-pow(4, 0.2) // 1.31951
-@function math-pow ($base, $exp) {
+//     math-pow(4, 2)                   // 16
+//     math-pow(4, -2)                  // 0.0625
+//     math-pow(4, 0.2)                 // 1.31951
+
+@function math-pow($base, $exp) {
     @if $exp==floor($exp) {
         $r: 1;
         $s: 0;
