update: list functions block comments added examples

--- a/src/helpers/functions/list/_list-create.scss
+++ b/src/helpers/functions/list/_list-create.scss
@@ -4,6 +4,11 @@
 // @param {List} $list (null)			- list
 //
 // @return {List}
+// @return {List}
+//
+// @example
+//     list-create(comma) 				// () - with comma separator
+//     list-create(space)  				// () - with space separator
 
 @function list-create( $separator:space, $list:null ) {
   	@return join((), if( $list != null, $list, ()), $separator);
