--- a/src/helpers/functions/list/_list-flatten.scss
+++ b/src/helpers/functions/list/_list-flatten.scss
@@ -4,6 +4,9 @@
 // @param {String} $separator           - separator list
 // 
 // @return {List}
+//
+// @example
+//     list-flatten("a" "b" "c", 1 (2, 3))  // ("a" "b" "c" 1 2 3)
 
 @function list-flatten( $list, $separator: null ) {
     $result: ();
