--- a/src/helpers/functions/list/_list-prepend.scss
+++ b/src/helpers/functions/list/_list-prepend.scss
@@ -5,6 +5,10 @@
 // @param {String}  $separator (null)	- list separator
 //
 // @return {List}
+//
+// @example
+//     list-prepend("b" "c" "d", "a")   // ("a" "b" "c" "d")
+//     list-prepend(2 3 4, 1)    		// (1 2 3 4)
 
 @function list-prepend($list, $value, $separator:null) {
     @return list-insert($list,$value, 1, $separator);
