--- a/src/helpers/functions/list/_list-after.scss
+++ b/src/helpers/functions/list/_list-after.scss
@@ -6,6 +6,10 @@
 // @param {String}  $separator (null)	- list separator
 //
 // @return {List}
+//
+// @example
+//     list-after("a" "c" "d", "b", "a")   	// ("a" "b" "c" "d")
+//     list-after(1 3 4, 2, 1)   			// (1 2 3 4)
 
 @function list-after($list, $value, $search:null, $separator:null) {
     @return list-insert($list,$value, if( $search != null, list-index($list, $search) + 1, null), $separator);
