--- a/src/helpers/functions/list/_list-append.scss
+++ b/src/helpers/functions/list/_list-append.scss
@@ -5,6 +5,10 @@
 // @param {String}  $separator (null)	- list separator
 //
 // @return {List}
+//
+// @example
+//     list-append("a" "b" "c", "d")   	// ("a" "b" "c" "d")
+//     list-append(1 2 3, 4)    		// (1 2 3 4)
 
 @function list-append($list, $value, $separator:null) {
     @return list-insert($list,$value, null, $separator);
