--- a/src/helpers/functions/list/_list-before.scss
+++ b/src/helpers/functions/list/_list-before.scss
@@ -6,6 +6,10 @@
 // @param {String}  $separator (null)	- list separator
 //
 // @return {List}
+//
+// @example
+//     list-before("a" "c" "d", "b", "c")   // ("a" "b" "c" "d")
+//     list-before(1 3 4, 2, 3)   			// (1 2 3 4)
 
 @function list-before($list, $value, $search:null, $separator:null) {
     @return list-insert($list,$value, if( $search != null, list-index($list, $search), 1), $separator);
