update: added comment blocks to number functions

--- a/src/helpers/functions/number/_number-cast.scss
+++ b/src/helpers/functions/number/_number-cast.scss
@@ -1,3 +1,13 @@
+// Transform `$string` to number.
+//
+// @param {Number}  $string           - number to be converted
+//
+// @return {Number}
+//
+// @example
+//     number-cast("1px")             // 1px
+//     number-cast("-1em")            // -1em
+
 @function number-cast($string) {
   // Result
   $result: 0;
