--- a/src/helpers/functions/number/_number-unit-angle.scss
+++ b/src/helpers/functions/number/_number-unit-angle.scss
@@ -1,3 +1,15 @@
+// Transform `$angle` to other indicated by `$unit`.
+//
+// @param {Number}  $angle              - angle to be converted, assuming unitless number to be in rad.
+// @param {Number}  $unit               - unit to convert output angle
+// @param {Number}  $unit-less (false)  - bool to set unit-less returned angle 
+//
+// @return {Bool}
+//
+// @example
+//     number-unit-angle(60deg, rad)      // 1.0472rad
+//     number-unit-angle(1rad, deg, true) // 57.29578
+
 @function number-unit-angle($angle, $unit, $unit-less: false) {
     @if unitless($angle) {
         @return $angle;
@@ -22,5 +34,5 @@
     @else {
         $conversion_angle_factor: nth($NUMBER_UNIT_ANGLE_VALUES, $input_angle_unit_index)/nth($NUMBER_UNIT_ANGLE_VALUES, $output_unit_index);
     }
-    @return $input_angle_number * $conversion_angle_factor;
+    @return if($unit-less, 1, nth($NUMBER_UNIT_ANGLE_VALUES, $output_unit_index)) * $input_angle_number * $conversion_angle_factor;
 }
