--- a/src/helpers/functions/number/_number-unit-set.scss
+++ b/src/helpers/functions/number/_number-unit-set.scss
@@ -1,3 +1,13 @@
+// Adds a unit of `$number`.
+//
+// @param {Number}  $number
+//
+// @return {String}
+//
+// @example
+//     number-unit-set(60, deg)      	// 60deg
+//     number-unit-set(10, px) 			// 10px
+
 @function number-unit-set($number, $unit) {
 
 	@if number-is-unit($number) {
