fix: conditional error syntax on math-rand

--- a/src/helpers/functions/number/_number-rand.scss
+++ b/src/helpers/functions/number/_number-rand.scss
@@ -9,7 +9,7 @@
 //     number-rand(0, 10)   			// >0 and <10
 
 @function number-rand($min: null, $max: null, $factor: 1000000000) {
-    @if $min != null and $max = null {
+    @if $min != null and $max != null {
         @return floor(random($factor) / $factor * $max) + $min;
     }
     @return false;
